--- a/AutoMall/ViewControllers/PersonalCenter/MailOrderSingleCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailOrderSingleCell.xib
@@ -34,27 +34,37 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wfv-Qp-o1y">
                         <rect key="frame" x="0.0" y="34" width="320" height="75"/>
                         <subviews>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SKy-Fh-7WE">
+                                <rect key="frame" x="0.0" y="15" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="EDm-aQ-ZMS"/>
+                                    <constraint firstAttribute="height" constant="44" id="YDy-8F-uXV"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                <state key="normal" image="checkbox_no"/>
+                                <state key="selected" image="checkbox_yes"/>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="sOp-pp-ZM3">
-                                <rect key="frame" x="16" y="7.5" width="60" height="60"/>
+                                <rect key="frame" x="36" y="7.5" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="8uQ-Ev-lE8"/>
                                     <constraint firstAttribute="width" constant="60" id="lCe-AX-VXY"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="【4条套装】韩泰Hankook万途仕Ventus S1noble 万途仕Ventus S1noble" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sH6-Zw-0fc">
-                                <rect key="frame" x="84" y="8" width="220" height="31.5"/>
+                                <rect key="frame" x="104" y="8" width="200" height="31.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7q-Br-pkb">
-                                <rect key="frame" x="84" y="51" width="37.5" height="16"/>
+                                <rect key="frame" x="104" y="51" width="37.5" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="x1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKL-UA-KgL">
-                                <rect key="frame" x="131.5" y="51" width="13" height="16"/>
+                                <rect key="frame" x="151.5" y="51" width="13" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -62,11 +72,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="sOp-pp-ZM3" firstAttribute="leading" secondItem="wfv-Qp-o1y" secondAttribute="leading" constant="16" id="6CD-Bc-6qg"/>
+                            <constraint firstItem="SKy-Fh-7WE" firstAttribute="leading" secondItem="wfv-Qp-o1y" secondAttribute="leading" id="4Q5-2x-XR2"/>
+                            <constraint firstItem="sOp-pp-ZM3" firstAttribute="leading" secondItem="wfv-Qp-o1y" secondAttribute="leading" constant="36" id="6CD-Bc-6qg"/>
                             <constraint firstItem="sH6-Zw-0fc" firstAttribute="top" secondItem="wfv-Qp-o1y" secondAttribute="top" constant="8" id="6NI-yN-jzv"/>
                             <constraint firstItem="k7q-Br-pkb" firstAttribute="leading" secondItem="sOp-pp-ZM3" secondAttribute="trailing" constant="8" id="9ZN-EP-QNU"/>
                             <constraint firstItem="sKL-UA-KgL" firstAttribute="leading" secondItem="k7q-Br-pkb" secondAttribute="trailing" constant="10" id="D74-A9-sTE"/>
                             <constraint firstItem="sOp-pp-ZM3" firstAttribute="centerY" secondItem="wfv-Qp-o1y" secondAttribute="centerY" id="UnA-PA-9G7"/>
+                            <constraint firstItem="SKy-Fh-7WE" firstAttribute="centerY" secondItem="wfv-Qp-o1y" secondAttribute="centerY" id="duc-Cl-VYa"/>
                             <constraint firstItem="sH6-Zw-0fc" firstAttribute="leading" secondItem="sOp-pp-ZM3" secondAttribute="trailing" constant="8" id="oSZ-01-rqe"/>
                             <constraint firstAttribute="bottom" secondItem="k7q-Br-pkb" secondAttribute="bottom" constant="8" id="pve-ta-1D9"/>
                             <constraint firstAttribute="trailing" secondItem="sH6-Zw-0fc" secondAttribute="trailing" constant="16" id="sGT-Up-wbu"/>
@@ -165,17 +177,20 @@
                 <outlet property="UnitPriceL" destination="k7q-Br-pkb" id="fiV-0D-8ES"/>
                 <outlet property="allMoneyL" destination="j0x-ce-K0I" id="J00-3g-vzH"/>
                 <outlet property="btn" destination="3aZ-Gr-dr5" id="wYH-jU-TrB"/>
+                <outlet property="checkboxBtn" destination="SKy-Fh-7WE" id="QjX-sZ-sts"/>
                 <outlet property="imgView" destination="sOp-pp-ZM3" id="v7a-iN-uXZ"/>
                 <outlet property="nameL" destination="sH6-Zw-0fc" id="REt-e0-eYu"/>
                 <outlet property="numL" destination="sKL-UA-KgL" id="71b-1D-FxH"/>
                 <outlet property="numberL" destination="N2l-Ek-yiR" id="NSg-PT-6mz"/>
                 <outlet property="statusL" destination="GcO-xa-Mxs" id="PGE-Z4-BbX"/>
             </connections>
-            <point key="canvasLocation" x="-393" y="36"/>
+            <point key="canvasLocation" x="-535" y="39"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="arrows" width="26" height="48"/>
+        <image name="checkbox_no" width="90" height="90"/>
+        <image name="checkbox_yes" width="90" height="90"/>
         <image name="placeholderPictureSquare" width="151" height="151"/>
     </resources>
 </document>
